# pm-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.ja.md  README.md  pyproject.toml
docs/: README.md  cheatsheet.ja.md  cheatsheet.md  claudemd-feature-prompt.md  cross-check-prompt.md  crosscheck-fix-prompt.md  design.md  memory-layer-design.md  memory-layer-prompt.md  workflow.md
skill/super-research/: SKILL.md
src/pm_server/: __init__.py  __main__.py  claudemd.py  dashboard.py  discovery.py  hooks.py  installer.py  memory.py  models.py  recall.py  rules.py  server.py  storage.py  utils.py  workflow.py
src/pm_server/templates/: dashboard_portfolio.html  dashboard_single.html
src/pm_server/templates/workflows/: development.yaml  discovery.yaml  super-research.yaml
tests/: conftest.py  test_claudemd.py  test_context.py  test_dashboard.py  test_discovery.py  test_hooks.py  test_installer.py  test_knowledge.py  test_memory.py  test_memory_ops.py  test_models.py  test_recall.py  test_rules.py  test_server.py  test_storage.py  test_utils.py  test_velocity.py  test_workflow.py
