[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm-server"
version = "0.2.0"
description = "Project management MCP Server for Claude Code — track tasks, visualize progress, manage decisions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Shinichi Nakazato" }]
keywords = ["claude-code", "project-management", "mcp", "mcp-server"]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "jinja2>=3.0",
]

[project.scripts]
pm-server = "pm_server.__main__:cli"

[project.urls]
Homepage = "https://github.com/code-retriever/pm-server"
Repository = "https://github.com/code-retriever/pm-server"
Issues = "https://github.com/code-retriever/pm-server/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
